# ned2_mars

./: .gitignore  test1.py  test2.py  test3.py  test6.py  test_async_executor_scenario.py  test_async_simple.py  test_collision_simple.py
src/ned-ros2-driver/: requirements.txt
src/ned-ros2-driver/niryo_ned_description/urdf/ned2/: niryo_ned2_dual.urdf.xacro  niryo_ned2_dual_arm.urdf.xacro
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/config/: async_executor.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  moveit_py_params.yaml  niryo_ned2_dual.ros2_control.xacro  niryo_ned2_dual.srdf  niryo_ned2_dual.urdf.xacro  ros2_controllers.yaml  workspace_scene.yaml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  ned2_dual_arm_moveit_launch.py  rsp.launch.py  setup_assistant.launch.py  sim_dualarm.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/scripts/: async_executor_lib.py  test_async1.py  test_async2.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/src/: __init__.py  async_executor_node.py  collision_detector.py  joint_state_prefixer.py  load_workspace_scene.py  online_collision_monitor.py  scheduler.py  trajectory_utils.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_mock_moveit_config/config/: moveit_controllers.yaml  ompl_planning_pipeline.yaml  ros2_controllers.yaml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_mock_moveit_config/launch/: demo.launch.py  sim_mock.launch.py  sim_mock_ompl.launch.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_moveit_config/launch/: ned2_moveit_launch.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_nrobot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_nrobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  niryo_ned2_nrobot.ros2_control.xacro  niryo_ned2_nrobot.srdf  niryo_ned2_nrobot.urdf.xacro  robot_config.yaml  ros2_controllers.yaml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_nrobot_moveit_config/launch/: demo_nrobot.launch.py  nrobot_moveit_launch.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_nrobot_moveit_config/scripts/: generate_all.py  generate_controllers.py  generate_initial_positions.py  generate_joint_limits.py  generate_kinematics.py  generate_ros2_control.py  generate_srdf.py  generate_urdf_macro.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_nrobot_moveit_config/src/: joint_state_prefixer.py
src/ned-ros2-driver/niryo_ned_ros2_driver/config/: drivers_list.yaml
src/ned-ros2-driver/niryo_ned_ros2_driver/niryo_ned_ros2_driver/: topic.py
src/ned-ros2-driver/niryo_ned_vision/: package.xml  setup.cfg  setup.py
src/ned-ros2-driver/niryo_ned_vision/launch/: markers.launch.py  vision.launch copy 2.py  vision.launch.py
src/ned-ros2-driver/niryo_ned_vision/niryo_ned_vision/: arucodetection.py  arucodetection2.py  calibrate_marker.py  camera_calibration.npz  d435_arucodetection.py  dual_camera_calibration.py  marker_publisher.py  marker_translation_node.py
test/actions/: actions1.py  actions2.py  actions3.py
test/async/: async1.py  async2.py  async3.py  async4.py  async5.py  async6.py  async7.py  async8.py  async9.py
test/moveit/: moveit2.py  moveit3.py
test/moveit_py/: moveit2.py
test/pr3243/: moveit1.py  moveit_py_params.yaml  single2.py
